# optimal-gokart-path-finder

./: .gitignore  .pre-commit-config.yaml  LICENSE  OptimalPathClasses.py  README.md  brnik_track_example.py  gokart_test.py  optimal_path.py  optimal_path_classes.py  pyproject.toml  requirements.txt  ruff.toml
.github/workflows/: ci.yml
examples/: brnik_track_example.py  points.npy
src/optimal_gokart/: __init__.py  algorithms.py  cli.py  models.py  visualization.py
src/optimal_gokart/data/: points.npy
tests/: test_models.py  test_optimal_path_classes.py
