[project]
name = "optimal-gokart-path-finder"
version = "0.1.0"
description = "Monte Carlo-based go-kart path optimizer with physics simulation"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "Pillow>=10.0",
    "scipy>=1.11",
    "numpy>=1.25",
    "matplotlib>=3.7",
    "imageio>=2.31",
]

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
