[project]
name = "optimal-gokart-path-finder"
version = "0.1.0"
description = "Monte Carlo-based go-kart path optimizer with physics simulation"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "Pillow>=10.0",
    "scipy>=1.11",
    "numpy>=1.25",
    "matplotlib>=3.7",
    "imageio>=2.31",
    "pyqt5>=5.15.11",
]

[project.scripts]
optimal-gokart = "optimal_gokart.cli:main"

[dependency-groups]
dev = [
    "ruff",
    "black",
    "mypy",
    "pytest",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
optimal_gokart = ["data/*"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
target-version = "py312"
line-length = 88
exclude = [".git", "__pycache__", ".venv", "venv"]

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "B",
    "C4",
    "UP",
]
ignore = [
    "E501",
    "B008",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.format]
quote-style = "double"

[tool.black]
line-length = 88
target-version = ["py312"]
exclude = '''
(
  \.git
  | \.venv
  | venv
  | __pycache__
)
'''

[tool.mypy]
python_version = "3.12"
disallow_untyped_defs = true
ignore_missing_imports = true
warn_unused_ignores = true
warn_return_any = true
warn_unused_configs = true
exclude = [".venv", "venv"]
